Fixit 	modificado:    Makefile 	modificado:    polinomio_cal.c 	modificado:    polinomio_cal.h 	modificado:    polinomio_cal.l 	modificado:    polinomio_cal.y

--- a/Hoc4/Makefile
+++ b/Hoc4/Makefile
@@ -14,5 +14,5 @@ lex.yy.c: polinomio_cal.l
 	@flex polinomio_cal.l
 
 clean:
-	@rm -f *.out lex.yy.c *.tab.* Polinomio
+	@rm -f *.out lex.yy.c Polinomio
 	@echo Limpio
